fixed table responsiveness on mobile size problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+
+
 /* {
     font-family: 'Exo', sans-serif;
     font-family: 'Roboto', sans-serif;
@@ -29,6 +31,9 @@
     background-color: #525252
 }
 
+.bg-color-personal-info{
+    background-color: #f4f4f4;
+}
 
 /*--------------Special paddings/margins/text-----*/
 
@@ -52,9 +57,12 @@ h1, h2, h3, h4{
 }
 
 .section-column{
-    display: table-cell;
     padding: 0 30px 30px;
     float: none;
+}
+
+.table-cell{
+    display: table-cell;
 }
 
 .section-heading{
@@ -221,3 +229,18 @@ footer{
     padding: 20px;
 
 }
+
+/*--------three-reasons-------*/
+
+.three-reasons-icon{
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading{
+    margin-bottom: 15px;
+
+}
+
+
+
